🪡 feat: add lucid orm compatiblity

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=iYVOcd4OLIgi6PtTYLedKTatQ8ShspNH
 DRIVE_DISK=local
+DB_CONNECTION=pg
+PG_HOST=localhost
+PG_PORT=5432
+PG_USER=lucid
+PG_DB_NAME=lucid
