--- a/package.json
+++ b/package.json
@@ -49,15 +49,16 @@
     "eslint-plugin-prettier": "^4.2.1",
     "pino-pretty": "^9.1.1",
     "prettier": "^2.8.3",
-    "typescript": "~4.6",
+    "typescript": "~4.6.4",
     "youch": "^3.2.2",
     "youch-terminal": "^2.1.5"
   },
   "dependencies": {
     "@adonisjs/auth": "^8.2.3",
-    "@adonisjs/core": "^5.8.0",
+    "@adonisjs/core": "^5.9.0",
     "@adonisjs/lucid": "^18.3.0",
-    "@adonisjs/repl": "^3.1.0",
+    "@adonisjs/repl": "^3.1.11",
+    "@faker-js/faker": "^7.6.0",
     "luxon": "^3.2.1",
     "pg": "^8.8.0",
     "proxy-addr": "^2.0.7",
