--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@adonisjs/core": "^5.9.0",
     "@adonisjs/lucid": "^18.3.0",
     "@adonisjs/repl": "^3.1.11",
+    "@adonisjs/view": "^6.2.0",
     "@faker-js/faker": "^7.6.0",
     "luxon": "^3.2.1",
     "pg": "^8.8.0",
