📤 chore: setup the package of adonis to work with emails

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,21 @@
 PORT=3333
 HOST=0.0.0.0
 NODE_ENV=development
-APP_KEY=iYVOcd4OLIgi6PtTYLedKTatQ8ShspNH
+APP_KEY=Cg50m3JwFK4StZY98W96IbgSi-2LiNzC
 DRIVE_DISK=local
 DB_CONNECTION=pg
-PG_HOST=localhost
+
+PG_HOST=db
 PG_PORT=5432
 PG_USER=lucid
+PG_PASSWORD=123
 PG_DB_NAME=lucid
+
+PGADMIN_DEFAULT_EMAIL=admin@admin.com
+PGADMIN_DEFAULT_PASSWORD=123
+
+SMTP_HOST=localhost
+SMTP_PORT=587
+SMTP_USERNAME=<username>
+SMTP_PASSWORD=<password>
 CACHE_VIEWS=false
