🪡 chore: add APP_URL to env

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ NODE_ENV=development
 APP_KEY=Cg50m3JwFK4StZY98W96IbgSi-2LiNzC
 DRIVE_DISK=local
 DB_CONNECTION=pg
+APP_URL=${HOST}:${PORT}
 
 PG_HOST=db
 PG_PORT=5432
